Refactor Cooja evaluation and parsing logic
- Enhanced CoojaEvaluator to support custom simulation duration and remote directory configuration.
- Introduced a new file generator that mirrors the batch_runner logic for generating simulation files.
- Updated parser to handle Cooja log output format, extracting metrics such as latency, energy, and throughput.
- Improved SSH connection handling in SSHPool to ensure connections are closed after each task execution.
- Added support for SSH password authentication in the evaluation configuration.
- Created a sample JSON configuration for running Cooja simulations with specified parameters.