@@ -4,56 +4,200 @@ A heuristic-statistical procedure (and full Python package) to estimate the
 **population size `n`** required by NSGA-III / genetic algorithms applied to
 **Problem P2 (Discrete Coverage with Mobility)**.
 
-> ⚠️ **Important** — `n_hat` is an **estimate**, not a guarantee. It comes
-> from a gambler-ruin approximation over structurally-defined blocks,
-> comparing a candidate block-optimum `H_i^*` against a deceptive competitor
-> `H_i^L`. The choice of `H_i^*` and `H_i^L` is *heuristic*. Repeat the
-> experiment with different partitions, scalarisations, and heuristics
-> before trusting any single value.
+> **Important** — `n_hat` is an **estimate**, not a guarantee. It comes from a
+> gambler-ruin approximation over structurally-defined blocks, comparing a
+> candidate block-optimum `H_i^*` against a deceptive competitor `H_i^L`. The
+> choice of those patterns is *heuristic*. Repeat the experiment with different
+> partitions, scalarisations, and heuristics before trusting any single value.
+
+---
 
 ## 1. Mathematical summary
 
 Given the binary chromosome `x ∈ {0,1}^J` where `x_j = 1` selects candidate
 `q_j` as a relay, we:
 
-1. Partition `Q = {q_1,…,q_J}` into `m` structural blocks `Q_1,…,Q_m`
-   (`partitioning.py`).
-2. For each block `i`, build two patterns of `Q_i`:
+1. Partition `Q = {q_1,…,q_J}` into `m` structural blocks `Q_1,…,Q_m`.
+2. For each block `i`, build two patterns:
    - `H_i^*` — a candidate block-optimum (heuristic).
    - `H_i^L` — a locally-attractive / deceptive competitor.
 3. Generate `R` complements `x_{-i}^{(r)}` filling the rest of the chromosome.
-4. Evaluate `F(H_i^*, x_{-i}^{(r)})` and `F(H_i^L, x_{-i}^{(r)})` either via
-   the *surrogate* (`evaluation/surrogate.py`) or via Cooja on remote
-   containers (`evaluation/cooja.py`).
-5. Aggregate metrics with `Ψ_a` (`aggregate_metrics`) and scalarise to `F(x)`
-   with `S` (`scalarize`).
+4. Evaluate `F(H_i^*, x_{-i}^{(r)})` and `F(H_i^L, x_{-i}^{(r)})` via the
+   surrogate or via Cooja on remote containers.
+5. Aggregate metrics with `Ψ_a` and scalarise to `F(x)`.
 6. Compute:
-
-   - `d_i_hat   = mean_r [ F_star^{(r)} − F_local^{(r)} ]`
-   - `σ_BB_i_hat = stdev_r [ Δ^{(r)} ]` (ddof = 1)
-
+   - `d_i_hat    = mean_r [ F_star^{(r)} − F_local^{(r)} ]`
+   - `σ_BB_i_hat = stdev_r [ Δ^{(r)} ]`  (ddof = 1)
 7. Estimate per block:
 
-   - Uniform initialisation:
+   Uniform initialisation:
+   ```
+   n_i_hat = −ln(α) · 2^{k_i − 1} · σ_BB_i_hat · √(2m) / d_i_hat
+   ```
 
-     ```
-     n_i_hat = −ln(α) · 2^{k_i − 1} · σ_BB_i_hat · √(2m) / d_i_hat
-     ```
+   Bernoulli(ρ) initialisation:
+   ```
+   π_i(H_i^*) = ρ^{s_i} (1−ρ)^{k_i − s_i}
+   n_i_hat    = (−ln(α) / (2 π_i)) · σ_BB_i_hat · √(2m) / d_i_hat
+   ```
 
-   - Bernoulli(ρ) initialisation:
+8. Global estimate: `n_hat = max_i ⌈n_i_hat⌉` over valid blocks.
 
-     ```
-     π_i(H_i^*) = ρ^{s_i} (1−ρ)^{k_i − s_i}
-     n_i_hat   = (−ln(α) / (2 π_i)) · σ_BB_i_hat · √(2m) / d_i_hat
-     ```
+---
 
-8. Global estimate: `n_hat = max_i ⌈n_i_hat⌉` over **valid** blocks.
+## 2. Installation
 
-## 2. Input format
+```bash
+cd pop-estimator
+python -m pip install -e .[dev]             # surrogate + tests
+python -m pip install -e .[ssh,kmeans,dev]  # add paramiko & scikit-learn
+```
 
-The package accepts the SimLab P2 JSON schema (both at the root or wrapped in
+Python ≥ 3.11 required.
+
+---
+
+## 3. Configuration
+
+All parameters live in a single JSON file. Generate the default template with:
+
+```bash
+p2-popest --dump-config > my_run.json
+```
+
+The output looks like:
+
+```json
+{
+  "instance_path": "path/to/instance.json",
+  "output_dir":    "results/run_001",
+  "mode":          "surrogate",
+
+  "partition_method": "grid",
+  "num_blocks":       8,
+  "hstar_method":     "structural_greedy",
+  "hlocal_method":    "deceptive_low_cost",
+
+  "complement_method": "bernoulli",
+  "num_complements":   30,
+  "rho":               0.2,
+
+  "alpha":              0.05,
+  "aggregation_method": "mean_with_std",
+
+  "seeds":       [42],
+  "random_seed": 42,
+
+  "weights": {
+    "w_connected":    1.0,
+    "w_relays":       0.05,
+    "w_hops":         0.05,
+    "w_dist":         0.05,
+    "w_redundancy":   0.02,
+    "w_latency":      0.0,
+    "w_energy":       0.0,
+    "w_throughput":   0.0,
+    "required_metrics": ["connected_ratio", "relay_count"]
+  },
+
+  "ssh_host":     "localhost",
+  "ssh_user":     "",
+  "ssh_password": null,
+  "ssh_ports":    [2231, 2232, 2233, 2234, 2235, 2236],
+
+  "remote_workdir":   "/tmp/popest",
+  "simulation_timeout":  900,
+  "simulation_duration": 180,
+  "remote_cooja_dir": "/opt/contiki-ng/tools/cooja",
+  "cooja_command_template": "cd {remote_cooja_dir} && /opt/java/openjdk/bin/java --enable-preview -Xms4g -Xmx4g -jar build/libs/cooja.jar --no-gui {simulation_file}",
+  "max_retries":        2,
+  "firmware_local_dir": null,
+
+  "force_overwrite": false
+}
+```
+
+The JSON is **partial-merge friendly**: you only need to include the keys you
+want to override from the defaults.
+
+### Key parameters
+
+| Key | Description |
+|-----|-------------|
+| `instance_path` | Path to the P2 instance JSON (required). |
+| `output_dir` | Directory where results are written. |
+| `mode` | `"surrogate"` (fast, no simulator) or `"cooja"` (SSH to Cooja containers). |
+| `partition_method` | `"grid"` \| `"kmeans"` \| `"radial_to_sink"` |
+| `num_blocks` | Number of structural blocks `m`. |
+| `hstar_method` | `"structural_greedy"` \| `"dense_local"` \| `"external"` |
+| `hlocal_method` | `"deceptive_low_cost"` \| `"redundant_local"` \| `"far_from_sink"` \| `"random_competitor"` |
+| `complement_method` | `"bernoulli"` \| `"feasible_repair"` \| `"population_sample"` |
+| `num_complements` | Number of complement vectors `R` per block. |
+| `seeds` | List of simulation seeds (one Cooja run per seed per solution). |
+| `firmware_local_dir` | Local path to firmware directory. Files are uploaded to the remote workdir for each simulation. Omit to use firmware already installed on the remote host. |
+
+---
+
+## 4. Running
+
+```bash
+# Surrogate (no Cooja — fast validation)
+p2-popest surrogate_run.json
+
+# Cooja mode
+p2-popest cooja_run.json
+
+# Override output directory without editing the file
+p2-popest cooja_run.json --output-dir results/run_002 --force
+```
+
+### Surrogate example config
+
+```json
+{
+  "instance_path": "examples/ind2.json",
+  "output_dir":    "results/surrogate_001",
+  "mode":          "surrogate",
+  "num_blocks":    8,
+  "num_complements": 30,
+  "seeds":         [336157, 667370, 35239, 873465],
+  "random_seed":   42
+}
+```
+
+### Cooja example config
+
+```json
+{
+  "instance_path": "examples/simple.json",
+  "output_dir":    "results/cooja_001",
+  "mode":          "cooja",
+  "num_blocks":    4,
+  "num_complements": 30,
+  "seeds":         [336157, 667370, 35239, 873465],
+  "random_seed":   42,
+
+  "ssh_host":     "localhost",
+  "ssh_user":     "root",
+  "ssh_password": "root",
+  "ssh_ports":    [2231, 2232, 2233, 2234, 2235, 2236],
+
+  "simulation_duration":  180,
+  "simulation_timeout":   900,
+  "firmware_local_dir":   "/path/to/wsn-dse/batch_runner/firmware/rpl-udp-csma"
+}
+```
+
+The surrogate is Cooja-free and deterministic — run it first to validate the
+pipeline before paying the cost of real simulation.
+
+---
+
+## 5. Input format
+
+The package accepts the SimLab P2 JSON schema (root-level or wrapped in
 `parameters`). See [`examples/ind2.json`](examples/ind2.json) for a complete
-working instance. The minimum required keys are:
+working instance.
 
 ```json
 {
@@ -63,7 +207,7 @@ working instance. The minimum required keys are:
     "radius_of_inter": 100,
     "region": [xmin, ymin, xmax, ymax],
     "sink": [x, y],
-    "candidates": [[x1,y1], [x2,y2], ...],
+    "candidates": [[x1, y1], [x2, y2], "..."],
     "mobile_nodes": [
       {
         "name": "...",
@@ -71,150 +215,115 @@ working instance. The minimum required keys are:
         "time_step": 1,
         "is_closed": true,
         "is_round_trip": false,
-        "path_segments": [["x(t)", "y(t)"], ...]
+        "path_segments": [["x_expr(t)", "y_expr(t)"], "..."]
       }
     ]
   }
 }
 ```
 
-Trajectory expressions evaluate `t ∈ [0, 1]` within each segment and may use
-`np.cos`, `np.sin`, `np.pi`, etc. They run in a restricted namespace
-(no Python builtins).
+Trajectory expressions evaluate `t ∈ [0, 1]` per segment and may use
+`np.cos`, `np.sin`, `np.pi`, etc. (restricted namespace, no Python builtins).
 
-## 3. Installation
+---
 
-```bash
-cd pop-estimator
-python -m pip install -e .[dev]            # surrogate + tests
-python -m pip install -e .[ssh,kmeans,dev] # add paramiko & sklearn
-```
+## 6. Cooja execution model
 
-Python ≥ 3.11 is required.
+Each SSH port gets one dedicated worker thread. Simulations are dispatched via
+a queue: at most one simulation runs per container at a time. Failures are
+retried up to `max_retries` times before the task is marked failed.
 
-## 4. Running in surrogate mode
+Per simulation the worker:
 
-```bash
-python -m p2_population_estimator.cli \
-  --instance examples/ind2.json \
-  --output-dir results/p2_estimation_run_001 \
-  --mode surrogate \
-  --partition-method grid \
-  --num-blocks 8 \
-  --num-complements 30 \
-  --alpha 0.05 \
-  --rho 0.20 \
-  --seeds 336157 667370 35239 873465 \
-  --random-seed 42
-```
+1. Calls `prepare_local` to build local files (`simulation.csc`, `positions.dat`,
+   and optionally firmware files copied from `firmware_local_dir`).
+2. Opens an SFTP connection and uploads all files to a per-run remote workdir
+   (e.g. `/tmp/popest/<solution_id>-<seed>/`).
+3. Executes the Cooja command via SSH with `get_pty=True` and polls for
+   completion.
+4. Downloads `COOJA.testlog` from the remote host and saves it locally as
+   `cooja.log`.
+5. Parses the log for JSON metrics emitted by the firmware.
 
-The surrogate is deterministic and Cooja-free — use it first to validate the
-pipeline before paying the cost of real simulation.
+When `firmware_local_dir` is set, the generated `simulation.csc` points
+`<source>` at the uploaded workdir and injects `CONTIKI=/opt/contiki-ng` into
+the make command (overriding the Makefile's relative `CONTIKI=../..`).
 
-## 5. Running with Cooja
+---
 
-```bash
-python -m p2_population_estimator.cli \
-  --instance examples/ind2.json \
-  --output-dir results/p2_cooja_run_001 \
-  --mode cooja \
-  --ssh-host localhost \
-  --ssh-user <USER> \
-  --ssh-ports 2231 2232 2233 2234 2235 2236 \
-  --partition-method grid \
-  --num-blocks 8 \
-  --num-complements 30 \
-  --alpha 0.05 \
-  --rho 0.20 \
-  --seeds 336157 667370 35239 873465 \
-  --simulation-timeout 900 \
-  --random-seed 42
-```
+## 7. Interpreting outputs
 
-Each of the six SSH ports is handled by a dedicated worker thread; at most
-one simulation runs per container at a time. Failures are retried up to
-`--max-retries` times. **The default `CoojaEvaluator.file_generator` writes
-placeholder artifacts** — you are expected to subclass `CoojaEvaluator` (or
-pass a `file_generator` callable) to emit firmware-specific `.csc` /
-`positions` / config files.
+### `population_estimate_result.json`
 
-## 6. Interpreting `population_estimate_result.json`
+| Key | Meaning |
+|-----|---------|
+| `experiment_config` | Snapshot of the config used. |
+| `instance_summary` | Counts and metadata of the loaded instance. |
+| `partition_summary` | Block sizes and candidate indices. |
+| `block_results` | Per-block `d_i_hat`, `σ_BB_i_hat`, `n_i_hat`, status, samples. |
+| `global_estimate` | `n_hat_uniform`, `n_hat_bernoulli`, valid/invalid counts. |
+| `failed_evaluations` | Solutions that raised during evaluation. |
+| `warnings` | Warnings, including the heuristic disclaimer. |
+| `reproducibility_info` | Package version, seeds, instance SHA-256. |
 
-Top-level keys:
+### `block_results.csv`
 
-| Key                     | Meaning                                                        |
-| ----------------------- | -------------------------------------------------------------- |
-| `experiment_config`     | Snapshot of the CLI/config arguments.                          |
-| `instance_summary`      | Counts and metadata of the loaded instance.                    |
-| `partition_summary`     | `num_blocks`, sizes, and indices per block.                    |
-| `block_results`         | Per-block `d_i_hat`, `σ_BB_i_hat`, `n_i_hat`, status, samples. |
-| `global_estimate`       | `n_hat_uniform`, `n_hat_bernoulli`, valid/invalid counts.      |
-| `failed_evaluations`    | Any solution that raised during evaluation.                    |
-| `warnings`              | Warnings (incl. the disclaimer).                               |
-| `reproducibility_info`  | Versions, seeds, instance SHA-256.                             |
+One row per block with the main scalar outputs (no sample lists).
 
-Per-block statuses:
+### Per-block statuses
 
-- `ok` — valid estimate.
-- `degenerate_zero_variance` — `n_i_hat` computed using a small floor.
-- `invalid_non_positive_d` — `H_i^*` was not consistently better than
-  `H_i^L`. Revise the heuristics.
-- `insufficient_samples` — `R < 2`, variance cannot be estimated.
+| Status | Meaning |
+|--------|---------|
+| `ok` | Valid estimate. |
+| `degenerate_zero_variance` | `n_i_hat` computed using a small variance floor. |
+| `invalid_non_positive_d` | `H_i^*` was not consistently better than `H_i^L`. Revise heuristics. |
+| `insufficient_samples` | `R < 2`, variance cannot be estimated. |
 
-## 7. Limitations
+---
 
-- `H_i^*` and `H_i^L` are *heuristic* — the value of `n_hat` is only as
-  meaningful as those heuristics. Run with multiple partitions / heuristics.
-- The surrogate captures structural coverage, not Cooja's MAC/routing
-  behaviour. Use it for pipeline validation and fast iteration, not as a
-  faithful proxy for end-to-end performance.
-- The gambler-ruin formula assumes block-level independence (no epistasis
-  between blocks beyond `x_{-i}`). For strongly-coupled problems the
-  estimate is optimistic.
-- `α` is a desired failure probability per block; multiple-testing
-  considerations are not corrected for here.
+## 8. Limitations
 
-## 8. Project layout
+- `H_i^*` and `H_i^L` are *heuristic*. Run with multiple partitions and
+  heuristics before trusting a single `n_hat`.
+- The surrogate captures structural coverage only, not MAC/routing behaviour.
+  Use it for pipeline validation and fast iteration.
+- The gambler-ruin formula assumes block-level independence. Strongly-coupled
+  problems yield an optimistic estimate.
+- `α` is a per-block failure probability. Multiple-testing correction is not
+  applied.
+
+---
+
+## 9. Project layout
 
 ```
-p2_population_estimator/
-  __init__.py
-  __main__.py
-  config.py
-  models.py
-  io.py
-  geometry.py
-  partitioning.py
-  blocks.py
-  complements.py
-  evaluation/
-    __init__.py
-    base.py
-    surrogate.py
-    cooja.py
-    ssh_pool.py
-    parser.py
-  statistics.py
-  estimator.py
-  experiment.py
-  cli.py
-  logging_utils.py
-tests/
-  conftest.py
-  test_io.py
-  test_geometry.py
-  test_partitioning.py
-  test_blocks.py
-  test_statistics.py
-  test_estimator.py
-  test_surrogate.py
-  test_parser.py
-  test_experiment.py
-examples/
-  ind2.json
+pop-estimator/
+  p2_population_estimator/
+    cli.py              # JSON-driven entrypoint
+    experiment.py       # Pipeline orchestration
+    models.py           # Dataclasses (ExperimentConfig, P2Problem, ...)
+    io.py               # Instance loading, JSON/CSV output
+    partitioning.py     # Grid / k-means / radial partition methods
+    blocks.py           # H_star / H_local builders
+    complements.py      # Complement generation
+    estimator.py        # Gambler-ruin formula, global aggregation
+    evaluation/
+      base.py           # BaseEvaluator ABC
+      surrogate.py      # Structural coverage surrogate
+      cooja.py          # Cooja file generation + CoojaEvaluator
+      ssh_pool.py       # SSH worker pool (paramiko)
+      parser.py         # COOJA.testlog metric parser
+    config.py
+    geometry.py
+    statistics.py
+    logging_utils.py
+  tests/
+  examples/
+    ind2.json
+    simple.json
 ```
 
-## 9. Running tests
+## 10. Running tests
 
 ```bash
 cd pop-estimator
